--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Pictures (<%= @pictures.length %>)</h1>
+<h1>Welcome to Pictures (<%= @pictures.length %>)</h1>
 <%= link_to "New Picture", "/pictures/new" %>
 
 <% @pictures.each do |picture| %>
 
-  <p><%= picture[:title] %>, <%= picture[:artist] %></p>
+  <p><%= picture[:title] %> , <%= picture[:artist] %></p>
   <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
   
 <% end %>
